--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    font-family: 'Times New Roman';
+    font-family: 'Bradley Hand';
     background: lightskyblue;
     color: darkblue;
     margin-left: 50px;
@@ -11,16 +11,12 @@ img {
 }
 
 h1 {
-    line-height: 1.2;
+    font-size: 50px;
 }
 
-h2, h3, h5, h6 {
-    line-height: 1.5;
+h2{
+    font-size: 30px;
   }
-
-h4, p {
-    line-height: 2;
-}
 
 .column {
     float: left;
